RESOLVED FIXED307491
CSSHighlights not repainted when they are re-added to the registry.
https://bugs.webkit.org/show_bug.cgi?id=307491
Summary CSSHighlights not repainted when they are re-added to the registry.
Megan Gardner
Reported 2026-02-10 16:30:09 PST
CSSHighlights not repainted when they are re-added to the registry.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-10 16:30:18 PST
Megan Gardner
Comment 2 2026-02-10 16:37:39 PST
EWS
Comment 3 2026-02-19 11:25:00 PST
Committed 307842@main (c411b9898504): <https://commits.webkit.org/307842@main> Reviewed commits have been landed. Closing PR #58350 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.