CSSHighlights not repainted when they are re-added to the registry. https://bugs.webkit.org/show_bug.cgi?id=307491 rdar://170099603

Reviewed by Aditya Keerthi.

When adding an existing highlight to the registry, we don't ensure that
the associated ranges are repainted. We just need to ensure that when we
add a new Highlight we repaint the ranges. We should also not repaint ranges
when the highlight is created, only when the highlight is added to the registry.

Test: fast/repaint/highlight-repainted-when-deleted-and-readded.html

* LayoutTests/fast/repaint/highlight-repainted-when-deleted-and-readded-expected.txt: Added.
* LayoutTests/fast/repaint/highlight-repainted-when-deleted-and-readded.html: Added.
* LayoutTests/platform/glib/fast/repaint/highlight-repainted-when-deleted-and-readded-expected.txt: Added.
* LayoutTests/platform/wpe/fast/repaint/highlight-repainted-when-deleted-and-readded-expected.txt: Added.
* Source/WebCore/Modules/highlight/Highlight.cpp:
(WebCore::Highlight::Highlight):
* Source/WebCore/Modules/highlight/HighlightRegistry.cpp:
(WebCore::HighlightRegistry::setFromMapLike):

Canonical link: https://commits.webkit.org/307842@main